@@ -486,6 +486,23 @@ typedef
 	/*@modifies data @*/;
 
 /** \ingroup header
+ * Retrieve extension or tag value.
+ *
+ * @param h		header
+ * @param tag		tag
+ * @retval *type	tag value data type (or NULL)
+ * @retval *p		tag value(s) (or NULL)
+ * @retval *c		number of values (or NULL)
+ * @return		1 on success, 0 on failure
+ */
+typedef
+int (*HDRext) (Header h, int_32 tag,
+			/*@null@*/ /*@out@*/ hTYP_t type,
+			/*@null@*/ /*@out@*/ void * p,
+			/*@null@*/ /*@out@*/ hCNT_t c)
+	/*@modifies *type, *p, *c @*/;
+
+/** \ingroup header
  * Retrieve tag value.
  * Will never return RPM_I18NSTRING_TYPE! RPM_STRING_TYPE elements with
  * RPM_I18NSTRING_TYPE equivalent entries are translated (if HEADER_I18NTABLE
@@ -749,6 +766,7 @@ struct HV_s {
     HDRwrite	hdrwrite;
     HDRisentry	hdrisentry;
     HDRfreetag	hdrfreetag;
+    HDRext	hdrext;
     HDRget	hdrget;
     HDRgetmin	hdrgetmin;
     HDRadd	hdradd;
